--- a/family.html
+++ b/family.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
+	<!-- Link to the favicon image -->
+	<link rel="icon" href="images/favicon.ico">
+	<!-- Link to the reset file -->
 	<link rel="stylesheet" href="css/reset.css">
+	<!-- Link to the stylesheet -->
 	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
@@ -31,7 +34,7 @@
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 	<footer>
-		<p>Colleen van Lent &copy; 2024</p>
+		<p>Colleen van Lent &copy; 2023</p>
 	</footer>
 </body>
 </html>
