--- a/family.html
+++ b/family.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+	<!-- Do no make any changes to this file, but you should still review the tags to make sure that you are familiar with them. -->
 
 <html lang="en">
-
+<!-- All of the meta data for the page belongs in the header tag -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,37 +12,46 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<!-- Link to the stylesheet -->
 	<link rel="stylesheet" href="css/style.css">
-	<title>Family Page</title>
+	<title>About Me</title>
 </head>
 
+<!-- All of the visible code in the page belongs in the body tag -->
 <body>
-
+	<!-- Header is a sematic tag page that aids readability -->
 	<header>
-
+		<!-- Nav is a sematic tag page that aids accessibility -->
 		<nav>
 			<ul>
+				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<!-- For this homework leave the class on index for all three pages. -->
 				<li class="active"><a href = "index.html" >About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
 				<li><a href = "random.html">Random Stuff</a></li>
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
-
+		<!-- The h1 is a semantic tag that aids accessibility -->
 		<h1>Family</h1>
 	</header>
-	
-	<main>
-		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 
+	<!-- Every page should have a main tag for accessibility -->
+	<main>
+		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  
+			We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
+
+		<!-- Make sure your anchor tags have a link (href) and a clickable component -->
+		<p>
 			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
 			<img src = "images/badlands.jpg" width="1000" alt = "Picture of Badlands"/>
 			<img src = "images/falling.jpg" width="25" alt = "Picture of Falling"/>
 			<img src = "images/rushmore.jpg" width="1000" alt = "Picture of Mountain Rushmore"/>
-			<img src = "images/jewel_cave.JPG" width="25" alt = "Picture of Jewel Cave"/>
-
-		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
+			<img src = "images/jewel_cave.JPG" width="25" alt = "Picture of Jewel Cave"/></p>
+		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  
+			Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.
+		</p>
 	</main>
-	
+
+	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
 		<p>Colleen van Lent &copy; 2023</p>
 	</footer>
